--- a/css/jquery.ennui.contentslider.css
+++ b/css/jquery.ennui.contentslider.css
@@ -30,7 +30,7 @@
 .contentslider {
   position:relative;
   display:block;
-  width: 600px;
+  width: 800px;/*600px*/
   height: 240px;
   margin:0 auto;
   overflow:hidden;
@@ -57,7 +57,7 @@
   top:0;
   left:0;
   display:block;
-  width: 600px;
+  width: 600px;/*600*/
   height: 160px;
   margin:0 auto;
   padding: 0;
